# Agent-Harness-

./: README.md  docker-compose.yml  main.py  pyproject.toml
agent/: agent.py
core/: config.py
database/: db.py  dependency.py  model.py  schema.py
