[project]
name = "agentharness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "deepagents>=0.6.8",
    "langchain>=1.3.4",
    "langchain-openrouter>=0.2.3",
    "pgvector>=0.4.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sentence-transformers>=5.5.1",
    "sqlalchemy[asyncio]>=2.0.50",
]
